test/invalid/bad_import_name.py
from basic import nonexistent_function

def main() -> None:
    nonexistent_function()
